--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,48 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap");
 
-body {
+body,
+html {
   font-family: "Roboto Mono", monospace;
   background-color: #f0f0f0; /* Light grey background */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Use the full height of the viewport */
+  /* height: 100vh; Use the full height of the viewport */
   margin: 0; /* Remove default margin */
 }
-
-p {
-  opacity: 0; /* Start with p tags invisible */
-  animation-name: fadeInUp; /* Reference the defined keyframes */
-  animation-duration: 1s; /* Duration of the animation */
-  animation-fill-mode: forwards; /* Keep the final state after animation ends */
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Use the full height of the viewport */
 }
 
-.sidebar {
-  height: 100%;
-  width: 0; /* Sidebar width is 0 by default */
-  position: fixed; /* Sidebar position */
-  z-index: 1; /* Stay on top of other content */
-  top: 0;
-  left: 0;
-  background-color: #d99b9b; /* Sidebar background color */
-  overflow-x: hidden; /* Hide horizontal scrollbar */
-  transition: 0.5s; /* Smooth transition for opening/closing */
-  padding-top: 60px; /* Top padding */
+.intro-text {
+  width: 50%;
+  padding-top: 2em;
 }
 
-.sidebar a {
-  padding: 10px 15px;
+.minimal-navbar {
+  display: flex;
+  justify-content: center; /* Center navbar items horizontally */
+  align-items: center; /* Center navbar items vertically */
+  flex-direction: row; /* Stack items vertically */
+  gap: 50px; /* Space between navbar items */
+  position: fixed; /* Fixed position */
+  top: 4em; /* Align to the top */
+}
+
+.minimal-navbar a {
+  color: #333;
   text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+  font-size: 16px;
+  font-weight: 400;
+  transition: color 0.3s;
+  border-bottom: 2px solid #333; /* Add underline with 2px solid border */
 }
 
-.sidebar a:hover {
-  color: #f1f1f1;
-}
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 10px 15px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.minimal-navbar a:hover {
+  color: #007bff;
 }
